--- a/.gitignore
+++ b/.gitignore
@@ -1,459 +1,29 @@
 import React from "react";
-import { Box, TextField, MenuItem } from "@mui/material";
+import { Alert, Box } from "@mui/material";
+import InfoOutlinedIcon from "@mui/icons-material/InfoOutlined";
 
-const ReportFormFilters = ({
-  quarter,
-  vendor,
-  pcm,
-  vendors,
-  pcmIds,
-  quarters,
-  onChange,
-  disabled
-}) => (
-  <Box sx={{ display: "flex", gap: 3, mb: 2, flexWrap: "wrap" }}>
-    <TextField
-      select
-      label="Report Quarter"
-      name="quarter"
-      value={quarter}
-      onChange={onChange}
-      required
-      sx={{ flex: 1, minWidth: 180 }}
-      disabled={disabled}
-    >
-      {quarters.map((q) => (
-        <MenuItem key={q} value={q}>{q}</MenuItem>
-      ))}
-    </TextField>
-    <TextField
-      select
-      label="Vendor"
-      name="vendor"
-      value={vendor}
-      onChange={onChange}
-      required
-      sx={{ flex: 1, minWidth: 180 }}
-      disabled={disabled}
-    >
-      {vendors.map((v) => (
-        <MenuItem key={v.name} value={v.name}>{v.name}</MenuItem>
-      ))}
-    </TextField>
-    <TextField
-      select
-      label="PCM ID"
-      name="pcm"
-      value={pcm}
-      onChange={onChange}
-      required
-      sx={{ flex: 1, minWidth: 180 }}
-      disabled={!vendor || disabled}
-    >
-      {pcmIds.map((id) => (
-        <MenuItem key={id} value={id}>{id}</MenuItem>
-      ))}
-    </TextField>
-  </Box>
-);
-
-export default ReportFormFilters;
-
-----
-
-
-import React from "react";
-import { Box, Autocomplete, TextField } from "@mui/material";
-
-const RiskAreaInput = ({ value, onChange, options, disabled }) => (
-  <Box sx={{ mb: 2 }}>
-    <Autocomplete
-      freeSolo
-      value={value}
-      onChange={onChange}
-      inputValue={value}
-      onInputChange={(event, newValue) =>
-        onChange(event, newValue)
-      }
-      options={options}
-      sx={{ width: "100%" }}
-      renderInput={(params) => (
-        <TextField {...params} label="Risk Area" required />
-      )}
-      disabled={disabled}
-    />
-  </Box>
-);
-
-export default RiskAreaInput;
-
-
------
-
-
-import React from "react";
-import { Box, Typography, TextField } from "@mui/material";
-
-const RiskInsightInput = ({ value, onChange }) => (
-  <Box sx={{ mt: 2 }}>
-    <Typography variant="subtitle1" fontWeight={600} sx={{ mb: 1 }}>
-      Risk Insight
-    </Typography>
-    <TextField
-      name="riskInsight"
-      value={value}
-      onChange={onChange}
-      multiline
-      minRows={5}
-      fullWidth
-      required
-      placeholder="Enter key risk insights here..."
-    />
-  </Box>
-);
-
-export default RiskInsightInput;
-
-
----
-
-
-import React from "react";
-import { Box, Typography, Stack, TextField } from "@mui/material";
-
-const RiskMitigationsInput = ({ mitigations, onChange }) => (
-  <Box sx={{ mt: 4 }}>
-    <Typography variant="subtitle1" fontWeight={600} sx={{ mb: 1 }}>
-      Risk Mitigations (A–E)
-    </Typography>
-    <Stack spacing={2}>
-      {["A", "B", "C", "D", "E"].map((key) => (
-        <TextField
-          key={key}
-          label={`Risk Mitigation ${key}`}
-          name={key}
-          value={mitigations[key]}
-          onChange={onChange}
-          multiline
-          minRows={2}
-          fullWidth
-          required={key === "A"}
-          placeholder={`Mitigation ${key}`}
-        />
-      ))}
-    </Stack>
-  </Box>
-);
-
-export default RiskMitigationsInput;
-
-
-
-----
-
-
-import React from "react";
-import {
-  Box,
-  Typography,
-  Table,
-  TableHead,
-  TableRow,
-  TableCell,
-  TableBody,
-  Paper,
-  IconButton
-} from "@mui/material";
-import EditIcon from "@mui/icons-material/Edit";
-import DeleteIcon from "@mui/icons-material/Delete";
-
-const RiskAreaTable = ({ riskAreasList, onEdit, onDelete }) => (
-  riskAreasList.length > 0 && (
-    <Box sx={{ mt: 4 }}>
-      <Typography variant="h6" fontWeight={700} gutterBottom>
-        Risk Areas for this PCM ID
-      </Typography>
-      <Paper elevation={2}>
-        <Table>
-          <TableHead>
-            <TableRow>
-              <TableCell sx={{ fontWeight: 700, width: "18%" }}>Risk Area</TableCell>
-              <TableCell sx={{ fontWeight: 700, width: "36%" }}>Risk Insight</TableCell>
-              <TableCell sx={{ fontWeight: 700, width: "36%" }}>Risk Mitigation</TableCell>
-              <TableCell sx={{ fontWeight: 700, width: "10%" }} align="center">Actions</TableCell>
-            </TableRow>
-          </TableHead>
-          <TableBody>
-            {riskAreasList.map((entry, idx) => (
-              <TableRow key={idx} hover>
-                <TableCell>
-                  <Typography fontWeight={600}>{entry.riskArea}</Typography>
-                </TableCell>
-                <TableCell>
-                  <Typography variant="body2">{entry.riskInsight}</Typography>
-                </TableCell>
-                <TableCell>
-                  <Box sx={{ pl: 1 }}>
-                    {["A", "B", "C", "D", "E"].map((key, mIdx) =>
-                      entry.mitigations[key] ? (
-                        <Typography variant="body2" sx={{ mb: 0.5 }} key={key}>
-                          <b>{idx + 1}{String.fromCharCode(97 + mIdx)}.</b> {entry.mitigations[key]}
-                        </Typography>
-                      ) : null
-                    )}
-                  </Box>
-                </TableCell>
-                <TableCell align="center">
-                  <IconButton onClick={() => onEdit(idx)} size="small"><EditIcon /></IconButton>
-                  <IconButton onClick={() => onDelete(idx)} size="small"><DeleteIcon /></IconButton>
-                </TableCell>
-              </TableRow>
-            ))}
-          </TableBody>
-        </Table>
-      </Paper>
-    </Box>
-  )
-);
-
-export default RiskAreaTable;
-
-
----
-
-import React, { useState } from "react";
-import { Paper, Typography, Box, Button, Snackbar, Alert } from "@mui/material";
-import ReportFormFilters from "../components/report/ReportFormFilters";
-import RiskAreaInput from "../components/report/RiskAreaInput";
-import RiskInsightInput from "../components/report/RiskInsightInput";
-import RiskMitigationsInput from "../components/report/RiskMitigationsInput";
-import RiskAreaTable from "../components/report/RiskAreaTable";
-
-// Mock Data
-const vendors = [
-  { name: "Nokia", pcmIds: ["PCM1001", "PCM1005"] },
-  { name: "Apple", pcmIds: ["PCM1002"] },
-  { name: "Samsung", pcmIds: ["PCM1003", "PCM1006"] },
-  { name: "Motorolla", pcmIds: ["PCM1004"] },
-];
-const existingRiskAreas = {
-  "Nokia_PCM1001": ["Mobile App", "SIM Card"],
-  "Apple_PCM1002": ["Hardware"],
-};
-const quarters = ["Q1", "Q2", "Q3", "Q4"];
-const emptyMitigation = () => ({ A: "", B: "", C: "", D: "", E: "" });
-
-const ReportForm = () => {
-  const [form, setForm] = useState({
-    quarter: "",
-    vendor: "",
-    pcm: "",
-    riskArea: "",
-    riskInsight: "",
-    mitigations: emptyMitigation(),
-  });
-  const [snackbar, setSnackbar] = useState({
-    open: false,
-    message: "",
-    severity: "success",
-  });
-  const [riskAreasList, setRiskAreasList] = useState([]);
-  const [editIndex, setEditIndex] = useState(null);
-
-  const currentPcmIds =
-    vendors.find((v) => v.name === form.vendor)?.pcmIds || [];
-  const existingKey = form.vendor && form.pcm ? `${form.vendor}_${form.pcm}` : null;
-  const currentExistingRiskAreas = existingRiskAreas[existingKey] || [];
-
-  const handleChange = (e) => {
-    const { name, value } = e.target;
-    setForm((f) => ({ ...f, [name]: value }));
-
-    if (name === "vendor") {
-      setForm((f) => ({
-        ...f,
-        pcm: "",
-        riskArea: "",
-        riskInsight: "",
-        mitigations: emptyMitigation(),
-      }));
-    }
-    if (name === "pcm") {
-      setForm((f) => ({
-        ...f,
-        riskArea: "",
-        riskInsight: "",
-        mitigations: emptyMitigation(),
-      }));
-    }
-  };
-
-  const handleRiskAreaChange = (event, value) => {
-    setForm((f) => ({
-      ...f,
-      riskArea: value || "",
-    }));
-  };
-
-  const handleMitigationChange = (e) => {
-    const { name, value } = e.target;
-    setForm((f) => ({
-      ...f,
-      mitigations: { ...f.mitigations, [name]: value },
-    }));
-  };
-
-  const handleAddRiskArea = () => {
-    if (!form.riskArea || !form.riskInsight) {
-      setSnackbar({
-        open: true,
-        message: "Please enter Risk Area and Risk Insight.",
-        severity: "error",
-      });
-      return;
-    }
-    const entry = {
-      riskArea: form.riskArea,
-      riskInsight: form.riskInsight,
-      mitigations: { ...form.mitigations },
-    };
-    let updatedList = [...riskAreasList];
-    if (editIndex !== null) {
-      updatedList[editIndex] = entry;
-      setEditIndex(null);
-    } else {
-      updatedList.push(entry);
-    }
-    setRiskAreasList(updatedList);
-    setForm((f) => ({
-      ...f,
-      riskArea: "",
-      riskInsight: "",
-      mitigations: emptyMitigation(),
-    }));
-  };
-
-  const handleEditRiskArea = (idx) => {
-    const entry = riskAreasList[idx];
-    setForm((f) => ({
-      ...f,
-      riskArea: entry.riskArea,
-      riskInsight: entry.riskInsight,
-      mitigations: { ...entry.mitigations },
-    }));
-    setEditIndex(idx);
-  };
-
-  const handleDeleteRiskArea = (idx) => {
-    setRiskAreasList(riskAreasList.filter((_, i) => i !== idx));
-    if (editIndex === idx) setEditIndex(null);
-  };
-
-  const handleFinalSave = () => {
-    if (!form.quarter || !form.vendor || !form.pcm || riskAreasList.length === 0) {
-      setSnackbar({
-        open: true,
-        message:
-          "Please select all filters and add at least one Risk Area.",
-        severity: "error",
-      });
-      return;
-    }
-    setTimeout(() => {
-      setSnackbar({
-        open: true,
-        message: "All risk areas saved to database!",
-        severity: "success",
-      });
-      setRiskAreasList([]);
-    }, 900);
-  };
-
-  return (
-    <Paper
-      elevation={3}
+const InfoBanner = ({ children }) => (
+  <Box sx={{ my: 0, mb: 3, mx: "auto", maxWidth: 900 }}>
+    <Alert
+      icon={<InfoOutlinedIcon fontSize="inherit" />}
+      severity="info"
       sx={{
-        p: { xs: 2, sm: 4 },
-        width: "100%",
-        mx: "auto",
-        my: 6,
-        borderRadius: 3,
-        bgcolor: "#fafcff",
+        fontSize: "1.07rem",
+        alignItems: "center",
+        boxShadow: 1,
+        bgcolor: "#e7f3fe",
+        color: "#15395b",
+        border: "1.5px solid #90caf9",
+        borderRadius: 2,
       }}
     >
-      <Typography variant="h5" fontWeight={700} gutterBottom>
-        New Risk Report
-      </Typography>
-      {/* Filters Row */}
-      <ReportFormFilters
-        quarter={form.quarter}
-        vendor={form.vendor}
-        pcm={form.pcm}
-        vendors={vendors}
-        pcmIds={currentPcmIds}
-        quarters={quarters}
-        onChange={handleChange}
-      />
-      {/* Risk Area Row */}
-      <RiskAreaInput
-        value={form.riskArea}
-        onChange={handleRiskAreaChange}
-        options={currentExistingRiskAreas}
-        disabled={!form.pcm}
-      />
-      <RiskInsightInput
-        value={form.riskInsight}
-        onChange={handleChange}
-      />
-      <RiskMitigationsInput
-        mitigations={form.mitigations}
-        onChange={handleMitigationChange}
-      />
-      {/* Add Risk Area Button */}
-      <Box sx={{ mt: 3, textAlign: "right" }}>
-        <Button
-          variant="outlined"
-          onClick={handleAddRiskArea}
-          sx={{ px: 4, fontWeight: 700 }}
-        >
-          {editIndex !== null ? "Update Risk Area" : "Add Risk Area"}
-        </Button>
-      </Box>
-      {/* Table of Temp Risk Areas */}
-      <RiskAreaTable
-        riskAreasList={riskAreasList}
-        onEdit={handleEditRiskArea}
-        onDelete={handleDeleteRiskArea}
-      />
-      {/* Final Save Button */}
-      <Box sx={{ mt: 4, textAlign: "center" }}>
-        <Button
-          variant="contained"
-          size="large"
-          sx={{ px: 6, py: 1.5, fontWeight: 700 }}
-          onClick={handleFinalSave}
-        >
-          Save All to Database
-        </Button>
-      </Box>
-      {/* Snackbar Toaster */}
-      <Snackbar
-        open={snackbar.open}
-        autoHideDuration={2800}
-        onClose={() => setSnackbar({ ...snackbar, open: false })}
-        anchorOrigin={{ vertical: "bottom", horizontal: "center" }}
-      >
-        <Alert
-          severity={snackbar.severity}
-          onClose={() => setSnackbar({ ...snackbar, open: false })}
-          variant="filled"
-          sx={{ width: "100%" }}
-        >
-          {snackbar.message}
-        </Alert>
-      </Snackbar>
-    </Paper>
-  );
-};
+      {children || (
+        <>
+          <strong>Reminder:</strong> After saving your data to the database, please note that the Looker dashboard will reflect your updates within <b>3–4 hours</b>.
+        </>
+      )}
+    </Alert>
+  </Box>
+);
 
-export default ReportForm;
+export default InfoBanner;
